Finalizado, modifcado y probado los controllers get y post, incluyendo los nuevos parametros en las vistasy manejado los requerimientos con component models

--- a/Views/Personas/Details.cshtml
+++ b/Views/Personas/Details.cshtml
@@ -44,7 +44,16 @@
         </dd>
 
         <dt>
-            @Html.DisplayName("DNI")
+            @Html.DisplayName("Tipo")
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoDocumento.nombre)
+        </dd>
+
+
+        <dt>
+            @Html.DisplayName("N° Documento")
         </dt>
 
         <dd>
