--- a/Views/Personas/Index.cshtml
+++ b/Views/Personas/Index.cshtml
@@ -1,10 +1,8 @@
 ﻿@using System.Web.UI.WebControls.Expressions
 @model IEnumerable<RegistroPersonas.Persona>
 
-@{
-    ViewBag.Title = "Lista";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewBag.Title = "Lista";
+                Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h2>Indice</h2>
 
@@ -15,17 +13,17 @@
 
     @using (Html.BeginForm("Index", "Personas"))
     {
-        <div>
-            <text>Buscar:</text><input type="text" name="search" placeholder="buscar"/> <label>Categoria</label><select name="category">
-                <option value="nombre">Nombre</option>
-                <option value="apellido">Apellido</option>
-                <option value="email">Email</option>
-                <option value="edad">Edad</option>
-                <option value="dni">DNI</option>
-                <option value="genero">Genero</option>
-            </select> <input type="submit" value="Buscar" id="btnSubmit"/>
-        </div>
-    }
+<div>
+    <text>Buscar:</text><input type="text" name="search" placeholder="buscar" /> <label>Categoria</label><select name="category">
+        <option value="nombre">Nombre</option>
+        <option value="apellido">Apellido</option>
+        <option value="email">Email</option>
+        <option value="edad">Edad</option>
+        <option value="tipo_doc">Tipo Doc</option>
+        <option value="nro_doc">N° Doc</option>
+        <option value="genero">Genero</option>
+    </select> <input type="submit" value="Buscar" id="btnSubmit" />
+</div>}
 </p>
 <table class="table table-hover">
     <tr>
@@ -42,7 +40,10 @@
             @Html.DisplayName("Edad")
         </th>
         <th>
-            @Html.DisplayName("DOC")
+            @Html.DisplayName("Tipo")
+        </th>
+        <th>
+            @Html.DisplayName("Documento")
         </th>
         <th>
             @Html.DisplayName("Genero")
@@ -52,37 +53,39 @@
 
     @foreach (var item in Model)
     {
-        <tr>
-            <td>
-                @Html.DisplayFor(modelItem => item.username)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.lastname)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.email)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.age)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.nro_doc)
-            </td>
-            <td>
-                @Html.DisplayFor(modelItem => item.gender)
-            </td>
-            <td>
-                @Html.ActionLink("Editar", "Edit", new { id = item.id }, new { @class = "btn btn-primary" }) |
-                @Html.ActionLink("Detalles", "Details", new { id = item.id }, new { @class = "btn btn-info" }) |
-                @Html.ActionLink("Borrar", "Delete", new { id = item.id }, new { @class = "btn btn-danger" })
-            </td>
-        </tr>
-    }
+<tr>
+    <td>
+        @Html.DisplayFor(modelItem => item.username)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.lastname)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.email)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.age)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.TipoDocumento.nombre)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.nro_doc)
+    </td>
+    <td>
+        @Html.DisplayFor(modelItem => item.gender)
+    </td>
+    <td>
+        @Html.ActionLink("Editar", "Edit", new { id = item.id }, new { @class = "btn btn-primary" }) |
+        @Html.ActionLink("Detalles", "Details", new { id = item.id }, new { @class = "btn btn-info" }) |
+        @Html.ActionLink("Borrar", "Delete", new { id = item.id }, new { @class = "btn btn-danger" })
+    </td>
+</tr>}
 
 </table>
 <p>
-    @using (Html.BeginForm("DeleteAll", "Personas")) {
-        <button name="X-HTTP-Method-Override" value="DELETE" formnovalidate="" class="cancel btn btn-danger" onclick="return confirm('Are you sure?')">BORRAR DATOS</button>
-    }
+    @using (Html.BeginForm("DeleteAll", "Personas"))
+    {
+<button name="X-HTTP-Method-Override" value="DELETE" formnovalidate="" class="cancel btn btn-danger" onclick="return confirm('Esta seguro?')">BORRAR DATOS</button>}
     @ViewData["Message"]
 </p>
