--- a/Views/Personas/Create.cshtml
+++ b/Views/Personas/Create.cshtml
@@ -11,11 +11,14 @@
 @using (Html.BeginForm()) 
 {
     @Html.AntiForgeryToken()
-    
+
 <div class="form-horizontal">
     <h4>Registro de Usuarios</h4>
     <hr />
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
+
+    @{ int idValue = (int)ViewData["randomId"]; }
+    @Html.HiddenFor(model => model.id, new { @Value = @idValue })
     <div class="form-group">
         @Html.Label("Nombre", new { @class = "control-label col-md-2" })
         <div class="col-md-10">
@@ -48,8 +51,19 @@
         </div>
     </div>
 
+    @{ ViewBag.Title = "Create";
+        var data = (List<SelectListItem>)ViewData["tipos"]; }
+
     <div class="form-group">
-        @Html.Label("DNI", htmlAttributes: new { @class = "control-label col-md-2" })
+        @Html.Label("Tipo", htmlAttributes: new { @class = "control-label col-md-2" })
+        <div class="col-md-10">
+            @Html.DropDownListFor(model => model.id_tipo_doc, @data, new { @class = "form-control", size = 1 })
+            @Html.ValidationMessageFor(model => model.id_tipo_doc, "", new { @class = "text-danger" })
+        </div>
+    </div>
+
+    <div class="form-group">
+        @Html.Label("N° Documento", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
             @Html.EditorFor(model => model.nro_doc, new { htmlAttributes = new { @class = "form-control" } })
             @Html.ValidationMessageFor(model => model.nro_doc, "", new { @class = "text-danger" })
@@ -69,6 +83,7 @@
             @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
         </div>
     </div>
+
     <div class="form-group">
         <div class="col-md-offset-2 col-md-10">
             <input type="submit" value="Crear" class="btn btn-default" />
