--- a/Views/Personas/Delete.cshtml
+++ b/Views/Personas/Delete.cshtml
@@ -45,7 +45,14 @@
         </dd>
 
         <dt>
-            @Html.DisplayName("DNI")
+            @Html.DisplayName("Tipo")
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.TipoDocumento.nombre)
+        </dd>
+        <dt>
+            @Html.DisplayName("N° Documento")
         </dt>
 
         <dd>
