--- a/Views/Personas/Edit.cshtml
+++ b/Views/Personas/Edit.cshtml
@@ -1,83 +1,93 @@
-﻿@model RegistroPersonas.Persona
+﻿@using System.Web.UI.WebControls
+@model RegistroPersonas.Persona
 
-@{
-    ViewBag.Title = "Editar";
-    Layout = "~/Views/Shared/_Layout.cshtml";
-}
+@{ ViewBag.Title = "Editar";
+    Layout = "~/Views/Shared/_Layout.cshtml"; }
 
 <h2>Editar</h2>
 
 
 @using (Html.BeginForm())
 {
-    @Html.AntiForgeryToken()
-    
-<div class="form-horizontal">
-    <h4>RegistroUsuariosCodes</h4>
-    <hr />
-    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
-    <div class="form-group">
-        @Html.Label("Nombre", new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
-        </div>
-    </div>
+@Html.AntiForgeryToken()
 
-    <div class="form-group">
-        @Html.Label("Apellido", new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                <div class="form-horizontal">
+                    <h4>RegistroUsuariosCodes</h4>
+                    <hr />
+                    @Html.ValidationSummary(true, "", new { @class = "text-danger" })
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
-        </div>
-    </div>
 
-    <div class="form-group">
-        @Html.Label("Edad", new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.age, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.age, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    @Html.Hidden("id", Model.id)
+                    <div class="form-group">
+                        @Html.Label("Nombre", new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.username, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.username, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-    <div class="form-group">
-        @Html.LabelFor(model => model.TipoDocumento.nombre, htmlAttributes: new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.EditorFor(model => model.nro_doc, new { htmlAttributes = new { @class = "form-control" } })
-            @Html.ValidationMessageFor(model => model.nro_doc, "", new { @class = "text-danger" })
-        </div>
-    </div>
+                    <div class="form-group">
+                        @Html.Label("Apellido", new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.lastname, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.lastname, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-    <div class="form-group">
-        @Html.Label("Genero", new { @class = "control-label col-md-2" })
-        <div class="col-md-10">
-            @Html.RadioButtonFor(model => model.gender, "M", new { id = "masculino" })
-            @Html.Label("masculino", "Hombre", new { @class = "control-label" })
-            @Html.RadioButtonFor(model => model.gender, "F", new { id = "femenino" })
-            @Html.Label("femenino", "Mujer", new { @class = "control-label" })
-            @Html.RadioButtonFor(model => model.gender, "A", new { id = "anonimo" })
-            @Html.Label("anonimo", "Anonimo", new { @class = "control-label" })
-            @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
-        </div>
-    </div>
-    
-    @Html.Hidden("id", Model.id)
+                    <div class="form-group">
+                        @Html.LabelFor(model => model.email, htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.email, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.email, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
 
-    <div class="form-group">
-        <div class="col-md-offset-2 col-md-10">
-            <input type="submit" value="Guardar" class="btn btn-primary" />
-        </div>
-    </div>
-</div>
-}
+                    <div class="form-group">
+                        @Html.Label("Edad", new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.age, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.age, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    @{ ViewBag.Title = "Edit";
+                        var data = (List<SelectListItem>)ViewData["tipos"]; }
+
+                    <div class="form-group">
+                        @Html.Label("Tipo", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.DropDownListFor(model => model.id_tipo_doc, @data, new { @class = "form-control" })
+                            @Html.ValidationMessageFor(model => model.id_tipo_doc, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.Label("N° Documento", htmlAttributes: new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.EditorFor(model => model.nro_doc, new { htmlAttributes = new { @class = "form-control" } })
+                            @Html.ValidationMessageFor(model => model.nro_doc, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        @Html.Label("Genero", new { @class = "control-label col-md-2" })
+                        <div class="col-md-10">
+                            @Html.RadioButtonFor(model => model.gender, "M", new { id = "masculino" })
+                            @Html.Label("masculino", "Hombre", new { @class = "control-label" })
+                            @Html.RadioButtonFor(model => model.gender, "F", new { id = "femenino" })
+                            @Html.Label("femenino", "Mujer", new { @class = "control-label" })
+                            @Html.RadioButtonFor(model => model.gender, "A", new { id = "anonimo" })
+                            @Html.Label("anonimo", "Anonimo", new { @class = "control-label" })
+                            @Html.ValidationMessageFor(model => model.gender, "", new { @class = "text-danger" })
+                        </div>
+                    </div>
+
+                    <div class="form-group">
+                        <div class="col-md-offset-2 col-md-10">
+                            <input type="submit" value="Guardar" class="btn btn-primary" />
+                        </div>
+                    </div>
+                </div>}
 
 <div>
     @Html.ActionLink("Volver a la lista", "Index", null, new { @class = "btn btn-info" })
